# Checkers-sfml

./: CMakeLists.txt  README.md
journal/: write-up-intro.md  write-up-part1.md
prototype/: CMakeLists.txt  main.cpp
prototype/src/: board.cpp  board.h  checkers.cpp  checkers.h  main.cpp  move.cpp  move.h  piece.cpp  piece.h  types.h
prototype/tests/: CMakeLists.txt  test_board.cpp  test_main.cpp  test_move.cpp  test_piece.cpp
src/: main.cpp
